--- a/assets/styles.css
+++ b/assets/styles.css
@@ -571,7 +571,9 @@ body {
   right: 6rem;
   border-radius: 50%;
   z-index: 12;
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
 
 .navigation__background {
   height: 6rem;
@@ -582,7 +584,7 @@ body {
   right: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 10;
-  transition: transform .8s; }
+  transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
 
 .navigation__nav {
   height: 100vh;
@@ -592,7 +594,7 @@ body {
   right: 0;
   z-index: 11;
   visibility: hidden;
-  transition: visibility .1s; }
+  transition: all .01s; }
 
 .navigation__list {
   position: absolute;
@@ -631,6 +633,41 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   visibility: visible; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3.5rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 2px;
+    background-color: #333;
+    display: inline-block; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all .2s; }
+  .navigation__icon::before {
+    top: -.8rem; }
+  .navigation__icon::after {
+    top: .8rem; }
+
+.navigation__button:hover .navigation__icon::before {
+  top: -1rem; }
+
+.navigation__button:hover .navigation__icon::after {
+  top: 1rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  top: 0;
+  transform: rotate(135deg); }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  top: 0;
+  transform: rotate(-135deg); }
 
 .section-about {
   background-color: #f7f7f7;
