--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,8 @@
         border-radius: 50%;
         z-index: 12;
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
+        text-align: center;
+        cursor: pointer;
 
     }
     &__background {
@@ -24,7 +26,7 @@
         right: 6.5rem;
         background-image: radial-gradient($light-green, $dark-green);
         z-index: 10;
-        transition: transform .8s;
+        transition: transform .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
         // transform: scale(50);
 
@@ -38,9 +40,7 @@
         right: 0;
         z-index: 11;
         visibility: hidden;
-        transition: visibility .1s;
-
-
+        transition: all .01s;
         // opacity: 0;
         // width: 0;
 
@@ -91,6 +91,7 @@
         }
     }
 
+    //Navigation button Functionality
     &__checkbox:checked ~ &__background {
         transform: scale(80);
         // visibility: visible;
@@ -99,4 +100,54 @@
         
         visibility: visible;
     }
+    //ICON 
+
+    &__icon {
+
+        position: relative;
+        margin-top: 3.5rem;
+
+        &,
+        &::before,
+        &::after {
+            width: 3rem;
+            height: 2px;
+            background-color: $color-grey-dark-1;
+            display: inline-block;
+        }
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            transition: all .2s;
+        }
+        &::before {top: -.8rem;}
+        &::after {top: .8rem;}
+    }
+    &__button:hover &__icon::before {
+        top: -1rem;
+    }
+    &__button:hover &__icon::after {
+        top: 1rem;
+    }
+    &__checkbox:checked + &__button &__icon {
+        background-color: transparent;
+
+    }
+
+    &__checkbox:checked + &__button &__icon::before {
+        top: 0;
+        transform: rotate(135deg);
+
+    }
+
+    &__checkbox:checked + &__button &__icon::after {
+        top: 0;
+        transform: rotate(-135deg);
+
+    }
+
+
 }
