--- a/assets/styles.css
+++ b/assets/styles.css
@@ -482,7 +482,23 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
   position: relative;
-  z-index: 13; }
+  z-index: 13;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup__close:link, .popup__close:visited {
+    color: #333;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block; }
+  .popup__close:hover {
+    color: #28b485; }
   .popup__content {
     position: absolute;
     top: 50%;
