--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -7,6 +7,29 @@
     background-color: rgba($color-black, .8);
     position: relative;
     z-index: 13;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+    &__close {
+        &:link,
+        &:visited {
+            color: $color-grey-dark-1;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+        }
+        &:hover {
+            color: $dark-green;
+        }
+    }
 
 
     &__content {
