--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -11,25 +11,7 @@
     visibility: hidden;
     transition: all .3s;
 
-    &:target {
-        opacity: 1;
-        visibility: visible;
-    }
-    &__close {
-        &:link,
-        &:visited {
-            color: $color-grey-dark-1;
-            position: absolute;
-            top: 2.5rem;
-            right: 2.5rem;
-            font-size: 3rem;
-            text-decoration: none;
-            display: inline-block;
-        }
-        &:hover {
-            color: $dark-green;
-        }
-    }
+    
 
 
     &__content {
@@ -40,6 +22,9 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0);
+        transition: all .5s .2s;
         // position: absolute;
         // top: 50%;
         // left: 50%;
@@ -81,5 +66,29 @@
         -webkit-hyphens: auto;
         hyphens: auto;
 
+    }
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    &__close {
+        &:link,
+        &:visited {
+            color: $color-grey-dark-1;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            line-height: 1;
+        }
+        &:hover {
+            color: $dark-green;
+        }
     }
 }
